--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,3 +25,5 @@ repos:
           - pydantic==2.12.5
           - pydantic-settings==2.12.0
           - sqlalchemy==2.0.44
+          - uvicorn[standard]==0.38.0
+          - prometheus-fastapi-instrumentator==7.1.0
