--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "prometheus-fastapi-instrumentator==7.1.0",
     "pydantic==2.12.5",
     "pydantic-settings==2.12.0",
+    "python-jose[cryptography]==3.5.0",
     "python-json-logger==4.0.0",
+    "python-multipart>=0.0.20",
     "sqlalchemy==2.0.44",
     "tzdata==2025.2",
     "uvicorn[standard]==0.38.0",
@@ -27,6 +29,7 @@ dev = [
     "pytest-asyncio>=1.3.0",
     "pytest-mypy-plugins>=3.2.0",
     "ruff>=0.14.7",
+    "types-python-jose>=3.5.0.20250531",
 ]
 
 
