--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,6 +24,7 @@ repos:
           - dishka==1.7.2
           - pydantic==2.12.5
           - pydantic-settings==2.12.0
+          - pydantic[email]==2.12.5
           - sqlalchemy==2.0.44
           - uvicorn[standard]==0.38.0
           - prometheus-fastapi-instrumentator==7.1.0
