--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "dishka==1.7.2",
     "fastapi==0.123.0",
     "prometheus-fastapi-instrumentator==7.1.0",
-    "pydantic==2.12.5",
+    "pydantic[email]==2.12.5",
     "pydantic-settings==2.12.0",
     "python-jose[cryptography]==3.5.0",
     "python-json-logger==4.0.0",
