--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,3 +32,4 @@ repos:
           - pytest-mypy-plugins>=3.2.0
           - python-jose[cryptography]==3.5.0
           - types-python-jose>=3.5.0.20250531
+          - bcrypt==5.0.0
