--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "sqlalchemy==2.0.44",
     "tzdata==2025.2",
     "uvicorn[standard]==0.38.0",
+    "bcrypt==5.0.0",
 ]
 
 [dependency-groups]
