--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,3 +33,4 @@ repos:
           - python-jose[cryptography]==3.5.0
           - types-python-jose>=3.5.0.20250531
           - bcrypt==5.0.0
+          - cashews==7.4.3
