--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,8 +29,10 @@ repos:
           - uvicorn[standard]==0.38.0
           - prometheus-fastapi-instrumentator==7.1.0
           - pytest
+          - pytest-asyncio>=1.3.0
           - pytest-mypy-plugins>=3.2.0
           - python-jose[cryptography]==3.5.0
           - types-python-jose>=3.5.0.20250531
           - bcrypt==5.0.0
           - cashews==7.4.3
+          - httpx>=0.28.1
