--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,9 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "aiosqlite>=0.21.0",
     "freezegun>=1.5.5",
+    "httpx>=0.28.1",
     "mypy>=1.19.0",
     "pre-commit>=4.5.0",
     "pytest>=9.0.1",
@@ -60,6 +62,10 @@ module = [
     "freezegun.*",
 ]
 ignore_missing_imports = true
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
 
 [tool.ruff]
 src = ["src"]
